# img_converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  img_converter.sln
png_jpg_converter/: main.cpp  png_jpg_converter.vcxproj
src/: main.cpp
